fix: aligned items to center

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -39,6 +39,7 @@ header {
 section {
     display: flex;
     justify-content: center;
+    align-items: center;
     min-height: 100vh;
     .section-content-wrapper {
         width: 50%;
